#1 | fix form spacing for radio buttons

--- a/public/styles/site/_page-waiting-child-profiles.scss
+++ b/public/styles/site/_page-waiting-child-profiles.scss
@@ -256,7 +256,7 @@
 
 /* Search Form */
 
-.search-form__search-button {
+.gallery-search-form__search-button {
 	color: #FFF;
     background-color: #66584D;
 }
